# aftermath

./: Cargo.toml  README.md
.github/workflows/: binaries.yml
src/: main.rs
