[package]
name = "aftermath-bin"
version = "0.1.0"
edition = "2021"
description = "find-and-replace, commit, check, and push new changes to CI files for multiple projects"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
tempfile = "3.13.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
