[package]
name = "aftermath-bin"
version = "0.1.1"
edition = "2021"
description = "find-and-replace, commit, check, and push new changes to CI files for multiple projects"
license = "MIT/Apache-2.0"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
tempfile = "3.13.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[profile.release]
strip = true

# Release(dist) binaries are setup for maximum runtime speed, at the cost of CI time
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
strip = true
